# get_OCR_data_distribution

./: .gitignore  README.md  pyproject.toml
data/: CombinedBetsug_Wylie_E_v1.json
src/OCR_data_distribution/: convert_parquet.py  create_hf_for_data.py  data_distribution.py  get_test_from_train.py
src/ocr_benchmark/: convert_parquet_to_jsonl.py  create_hf_repo_from_json.py  download_images.py  parser_dergetenjur.py  parser_kanjur.py
tests/: test_create_hf_repo_from_json.py  test_example.py
